[package]
name = "bitcoin-101"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = {version =  "0.12.0", features = ["electrum"]}
bitcoin = "0.27"
tokio = { version = "1.0", features = [ "rt-multi-thread", "macros", "time"] }